fiksa bildeproblem, oppdatert konsept

--- a/konseptdokument/concept.tex
+++ b/konseptdokument/concept.tex
@@ -18,29 +18,12 @@ Spillet er utviklet av en gruppe studenter på NTNU i faget Eksperter i Team. Sp
 Målet med dette avsnittet er å gi deg et innblikk i det utviklede spillkonseptet,
 hvilke spillaspekter som er tatt med og spilldynamikken.
 
-%Garbage Alert er et sanntids strategispill for mobile enheter. Hver
-%spiller blir tildelt en øy dekket med søppel. En øy består av en
-%gjenvinningsstasjon, en våpenstasjon og en forsvarssone.
-%Gjenvinningsstasjonen har som oppgave å transformere øyas søppel om til
-%ressurser. Disse ressuresene kan brukes til å kjøpe våpen,
-%forsvarsmurer, utvinne nye ressurser og oppgradere
-%gjennvinningsstasjonen. Mulige oppgraderinger for gjenvinningsstasjonen
-%er raskere gjennvinning og større kapasitet for inntak av søppel. Våpen
-%brukes til å skyte søppel på motstandernes øyer, og forsvarsmuren har
-%som oppgave å blokkere slike angrep. 
-
-%vinnsenarioet er å bli den første til å kvitte seg med alt søppelet på
-%øyen sin. Den andre måten å vinne på er å skyte i stykker motstandernes
-%gjenvinningsstasjon. Hvis en øy mister gjenvinningsstasjonen sin, vil
-%den bli oversvømt med søppel og synke ned i havet. Dermed kan spilleren
-%velge om han/hun vil fokusere på å forbedre sin egen øy eller ødelegge
-%for andre. 
 
 \subsection{Spillanalyse}
 
 Garbage Alert er et flerspiller sanntidsstrategispill, men muligheten for å spille alene mot pc-en finnes også. 
 
-Når man starter spillet har man følgende elementer:
+Man starter spillet med en øy og følgende elementer:
 
 \begin{itemize}
 	\item et resirkuleringssenter
@@ -54,20 +37,29 @@ Når man starter spillet har man følgende elementer:
 	\item muligheter for oppgraderinger av gjenvinningsstasjon slik at man også får gjenvinnet plast eller tre.
 \end{itemize}
 
-Jo flere typer ressurser man får gjenvinnet fra søppelet, jo flere muligheter har man får mer avanserte våpen, forsvar og oppgraderinger. Man starter med å kun gjenvinne papp. Figur xx viser mulighetene man har for å oppgradere resirkuleringssenteret slik at man får muligheten til å gjenvinne andre ressurser. For eksempel hvis man skal oppgradere til stål, må man først oppgradere til plast. For å oppgradere til titan kreves det at alle andre oppgraderinger allerede er utført.
+Jo flere typer ressurser man får gjenvinnet fra søppelet, jo flere muligheter har man for mer avanserte våpen, forsvar og oppgraderinger. Man starter med å kun gjenvinne papp. Figur xx viser mulighetene man har for å oppgradere resirkuleringssenteret slik at man får muligheten til å gjenvinne andre ressurser. For eksempel hvis man skal oppgradere til stål, må man først oppgradere til plast. For å oppgradere til titan kreves det at alle andre oppgraderinger allerede er utført. \\
 
-			\begin{figure} [here]
+	\begin{figure} [H]
 				\begin{center}
 					\includegraphics[scale=0.5]{images/oppgraderingstre}
 				\end{center}
 			\caption{Ressursoppgraderinger}
-		\end{figure}
+	\end{figure}
 		
-		
-De sentrale spillelementene består av å samle inn søppel til resikulerings vil være samling, ressursforvaltning, valg av våpen og forsvar, samt timing av våpenbruk. Spillinnholdet vil hovedsaklig være Pure Play (Usikker på dette innebærer det jeg tror), der målet er å få spilleren til å ha det gøy, men det vil også være elementer av realisme da det spilleren foretar seg vil virke inn på både lokalt og globalt miljø. Det vil være en lineær spillsekvens (Er usikker på denne fordi jeg ikke finner noen  spillsekvenstype som passer??) der spilleren får tilgang til nye våpentyper og forsvarsmuligheter etterhvert som krav for hver enkelt oppgradering er nådd. For at spillet skal få et lekent og fristende utseende har vi valgt en type tegneseriestil som vil gjøre nettopp dette. (Husker ikke om vi har vi diskutert dette, og hva vi kom fram til?)\\
-\\
+I tillegg til disse oppgraderingene har man også muligheten til å oppgradere gjenvinningseffektiviteten. Man har da følgende muligheter: \\
 
-Spillbeskrivelse: Spillets sjanger er valgt til flerspiller sanntidsstrategi, men det vil også være mulighet for å spille alene mot computer. (Usikker på om vi ble enig om at dette skulle være mulig?) Viktige spillelementer vil være samling, ressursforvaltning, valg av våpen og forsvar, samt timing av våpenbruk. Spillinnholdet vil hovedsaklig være Pure Play (Usikker på dette innebærer det jeg tror), der målet er å få spilleren til å ha det gøy, men det vil også være elementer av realisme da det spilleren foretar seg vil virke inn på både lokalt og globalt miljø. Det vil være en lineær spillsekvens (Er usikker på denne fordi jeg ikke finner noen  spillsekvenstype som passer??) der spilleren får tilgang til nye våpentyper og forsvarsmuligheter etterhvert som krav for hver enkelt oppgradering er nådd. For at spillet skal få et lekent og fristende utseende har vi valgt en type tegneseriestil som vil gjøre nettopp dette. (Husker ikke om vi har vi diskutert dette, og hva vi kom fram til?)\\ 
+		\begin{figure} [H]
+				\begin{center}
+					\includegraphics[scale=0.5]{images/effektivitet}
+				\end{center}
+			\caption{De ulike oppgraderingingene for effektivitet. Ved 10\% resirkuleringsgrad og 10 søppelenheter for man 1 enhet med ressurser per ressursoppgradering man har}
+		\end{figure}
+
+
+
+%De sentrale spillelementene består av å samle inn søppel til resikulerings vil være samling, %ressursforvaltning, valg av våpen og forsvar, samt timing av våpenbruk. Spillinnholdet vil hovedsaklig være Pure Play (Usikker på dette innebærer det jeg tror), der målet er å få spilleren til å ha det gøy, men det vil også være elementer av realisme da det spilleren foretar seg vil virke inn på både lokalt og globalt miljø. Det vil være en lineær spillsekvens (Er usikker på denne fordi jeg ikke finner noen  spillsekvenstype som passer??) der spilleren får tilgang til nye våpentyper og forsvarsmuligheter etterhvert som krav for hver enkelt oppgradering er nådd. For at spillet skal få et lekent og fristende utseende har vi valgt en type tegneseriestil som vil gjøre nettopp dette. (Husker ikke om vi har vi diskutert dette, og hva vi kom fram til?)\\
+
+%Spillbeskrivelse: Spillets sjanger er valgt til flerspiller sanntidsstrategi, men det vil også være mulighet for å spille alene mot computer. (Usikker på om vi ble enig om at dette skulle være mulig?) Viktige spillelementer vil være samling, ressursforvaltning, valg av våpen og forsvar, samt timing av våpenbruk. Spillinnholdet vil hovedsaklig være Pure Play (Usikker på dette innebærer det jeg tror), der målet er å få spilleren til å ha det gøy, men det vil også være elementer av realisme da det spilleren foretar seg vil virke inn på både lokalt og globalt miljø. Det vil være en lineær spillsekvens (Er usikker på denne fordi jeg ikke finner noen  spillsekvenstype som passer??) der spilleren får tilgang til nye våpentyper og forsvarsmuligheter etterhvert som krav for hver enkelt oppgradering er nådd. For at spillet skal få et lekent og fristende utseende har vi valgt en type tegneseriestil som vil gjøre nettopp dette. (Husker ikke om vi har vi diskutert dette, og hva vi kom fram til?)\\ 
 
 
 \subsection{Spillatmosfære}
