--- a/konseptdokument/report.tex
+++ b/konseptdokument/report.tex
@@ -40,6 +40,7 @@
 
 %%% Custom headers/footers (fancyhdr package)
 \usepackage{fancyhdr}
+\usepackage{float}
 \pagestyle{fancyplain}
 \fancyhead{}														% No page header
 \fancyfoot[C]{\thepage}										% Pagenumbering at center of footer
