--- a/konseptdokument/concept.tex
+++ b/konseptdokument/concept.tex
@@ -19,25 +19,25 @@ Målet med dette avsnittet er å gi deg et innblikk i det utviklede spillkonsept
 hvilke spillaspekter som er tatt med og spilldynamikken.
 
 
-\subsection{Spillanalyse}
+\subsection{Spilldynamikken}
 
-Garbage Alert er et flerspiller sanntidsstrategispill, men muligheten for å spille alene mot pc-en finnes også. 
+Garbage Alert er i utgangspunktet et flerspiller sanntidsstrategispill, men det er også mulighet for å spille alene mot spillere med kunstig intelligens. 
 
 Man starter spillet med en øy og følgende elementer:
 
 \begin{itemize}
-	\item et resirkuleringssenter
-	\item en våpenstasjon
-	\item en forsvarssone
+	\item Et resirkuleringssenter
+	\item En våpenstasjon
+	\item En forsvarssone
 	\item 10 enheter med papp i inventaret
 	\item 1000 enheter med søppel
-	\item muligheten til å gjenvinne papp fra søppelet. Gjenvinningsgraden er 10\%
-	\item muligheten til å bruke papp til å bygge våpen (papirfly) og forsvar (pappmur)
-	\item muligheten til å oppgradere gjenvinningsgraden til 20\%
-	\item muligheter for oppgraderinger av gjenvinningsstasjon slik at man også får gjenvinnet plast eller tre.
+	\item Muligheten til å gjenvinne papp fra søppelet. Gjenvinningsgraden er 10\%
+	\item Muligheten til å bruke papp til å bygge våpen (papirfly) og forsvar (pappmur)
+	\item Muligheten til å oppgradere gjenvinningsgraden til 20\%
+	\item Muligheter for oppgraderinger av gjenvinningsstasjon slik at man også får gjenvinnet plast eller tre.
 \end{itemize}
 
-Jo flere typer ressurser man får gjenvinnet fra søppelet, jo flere muligheter har man for mer avanserte våpen, forsvar og oppgraderinger. Man starter med å kun gjenvinne papp. Figur xx viser mulighetene man har for å oppgradere resirkuleringssenteret slik at man får muligheten til å gjenvinne andre ressurser. For eksempel hvis man skal oppgradere til stål, må man først oppgradere til plast. For å oppgradere til titan kreves det at alle andre oppgraderinger allerede er utført. \\
+Jo flere typer ressurser man får gjenvinnet fra søppelet, jo flere muligheter har man for mer avanserte våpen, forsvar og oppgraderinger. Man starter med å kun gjenvinne papp. Figur XX viser mulighetene man har for å oppgradere resirkuleringssenteret slik at man får muligheten til å gjenvinne andre ressurser. For eksempel hvis man skal oppgradere til stål, må man først oppgradere til plast. For å oppgradere til titan kreves det at alle andre oppgraderinger allerede er utført. \\
 
 	\begin{figure} [H]
 				\begin{center}
