--- a/konseptdokument/concept.tex
+++ b/konseptdokument/concept.tex
@@ -56,6 +56,18 @@ I tillegg til disse oppgraderingene har man også muligheten til å oppgradere g
 		\end{figure}
 
 
+%tabellen virker ikke av en eller annen grunn.....må få det til å funke, bilde
+%brukt i stedet, men det er litt feil...
+%\begin{tabularx}{300pt}{| l | l | l | l | l |}
+%\hline
+%\bf{Effektivitet} & \bf{Resirkuleringsgrad} & \bf{Ant. søppelenheter} & \bf{Tid} & %\bf{Ressurskrav} \\
+%\hline
+%Nivå 0 & 10 & 10 & 15sek & Ingen  \\
+%Nivå 1 & 20 & 10 & 15sek & Papp \\
+%Nivå 2 & 30 & 10 & 15sek & Papp, og plast eller tre \\
+%Nivå 3 & 30 & 20 & 15sek & Papp, plast, tre, stål, jern og titan \\
+%\hline
+%\end{tabularx}
 
 %De sentrale spillelementene består av å samle inn søppel til resikulerings vil være samling, %ressursforvaltning, valg av våpen og forsvar, samt timing av våpenbruk. Spillinnholdet vil hovedsaklig være Pure Play (Usikker på dette innebærer det jeg tror), der målet er å få spilleren til å ha det gøy, men det vil også være elementer av realisme da det spilleren foretar seg vil virke inn på både lokalt og globalt miljø. Det vil være en lineær spillsekvens (Er usikker på denne fordi jeg ikke finner noen  spillsekvenstype som passer??) der spilleren får tilgang til nye våpentyper og forsvarsmuligheter etterhvert som krav for hver enkelt oppgradering er nådd. For at spillet skal få et lekent og fristende utseende har vi valgt en type tegneseriestil som vil gjøre nettopp dette. (Husker ikke om vi har vi diskutert dette, og hva vi kom fram til?)\\
 
