Restructured files and added glossary (instead of references).

--- a/konseptdokument/intro.tex
+++ b/konseptdokument/intro.tex
@@ -19,19 +19,34 @@ Herunder vil den spillmessige bakgrunnen til hvert gruppemedlem bli
 beskrevet.
 \begin{description}
 \item[Kjetil Mehl (23)] \hfill \\
-Han begynte sin spillkarriere med en Nintendo 64\cite{n64} i 1999. Da
-var det eventyr og rollespill (se Seksjon~\ref{sec:sjangre}) som Legend
-of Zelda\cite{legendofzelda} og Banjo Kazooie\cite{banjokazooie} som
+Han begynte sin spillkarriere med en \gls{Nintendo 64} i 1999. Da
+var det eventyr og rollespill (se Seksjon~\ref{sec:sjangre}) som
+\gls{Legend of Zelda} og \gls{Banjo Kazooie} som
 stod i fokus. Da datamaskinen kom i hus gikk spillfokuset  over på
-konkurransespill som Counter-Strike og Warcraft. Han har i hovedsak vært
-en Nintendo fanboy\cite{fanboy}, men har i de senere år utvidet
+konkurransespill som Counter-Strike og \gls{WC3}. Han har i hovedsak vært
+en Nintendo~\gls{Fanboy}, men har i de senere år utvidet
 kolleksjonen til å omfatte Xbox.
 \item[Ina Sander Pedersen (26)] \hfill \\
-I 1996 oppdaget hun Rayman\cite{rayman} til PC og var fra den dag frelst for serien, men skiftet raskt konsoll til Playstation. For Ina har sjangeren plattform vært en klar favoritt gjennom årene og da hun senere fikk Gameboy Pocket\cite{gameboy} gikk tiden med til Donkey Kong Country 2\cite{DKC2}. Etterhvert som årene har gått har hun skiftet mellom Nintendo og Playstation, samt prøvd ut endel forskjellige sjangertyper, men Rayman og Donkey Kong seriene er og blir favoritter. 
+I 1996 oppdaget hun \gls{Rayman} til PC og var fra den dag frelst for
+serien, men skiftet raskt konsoll til Playstation. For Ina har sjangeren
+plattform vært en klar favoritt gjennom årene og da hun senere fikk
+\gls{Gameboy} gikk tiden med til \gls{DKC2}. Etterhvert som årene har gått har hun skiftet mellom
+Nintendo og Playstation, samt prøvd ut endel forskjellige sjangertyper,
+men Rayman og Donkey Kong seriene er og blir favoritter. 
 \item[Christian Aleksander Lysne (22)] \hfill \\
-Christian var 8 år da han fikk sin første Nintendo 64\cite{n64} , med spillene Super Mario 64\cite{mario64} og Mario Kart\cite{mariokart}. Senere gikk det i Legend of Zelda\cite{legendofzelda} og Super Smash Bros\cite{smash}. Tekken\cite{tekken} var også  populært i oppveksten. Warcraft 3\cite{wc3} og Diablo 2\cite{diablo2} tok etter hvert over, og spilles fortsatt i perioder.
+Christian var 8 år da han fikk sin første \gls{Nintendo 64}, med
+spillene \gls{Mario 64} og \gls{Mario Kart}.
+Senere gikk det i \gls{Legend of Zelda}  og \gls{SSMB}.
+\gls{Tekken} var også  populært i oppveksten. \gls{WC3} og
+\gls{Diablo 2} tok etter hvert over, og spilles fortsatt i perioder.
 \item[Andreas Røysland Aarnes (25)] \hfill \\
-Som seksåring prøvde Andreas Super Mario World\cite{supermarioworld} på Super Nintendo\cite{supernintendo} for første gang, og det var ikke før i 2011, da remaken New Super Mario Bros. Wii\cite{newsupermario} kom til Nintendo Wii\cite{wii}, at han igjen ble tilfredstilt innen spillverdenen. I mellomtiden har han låst seg til strategispill-seriene Warcraft\cite{wc3}, Command \& Conquer\cite{cc} og Age of Empires\cite{aoe}. 
+Som seksåring prøvde Andreas \gls{Super Mario World} på
+\gls{SNES} for første gang, og det var ikke før
+i 2011, da remaken New Super Mario Bros. Wii kom til
+\gls{Wii}, at han igjen ble tilfredstilt innen
+spillverdenen. I mellomtiden har han låst seg til strategispill-seriene
+\gls{WC3}, \gls{C and C} og Age of
+Empires\cite{aoe}. 
 \end{description}
 \subsection{Mål}
 Det overordnede målet for gruppen var å lage et spillkonsept hvert
