--- a/konseptdokument/report.tex
+++ b/konseptdokument/report.tex
@@ -53,13 +53,22 @@
 \numberwithin{table}{section}																% Tablenumbering: section.tab#
 \newcommand{\HRule}{\rule{\linewidth}{0.5mm}} % command to make the lines in title page
 
-%%% Begin document
+%%% Glossary stuff
+\newcommand*{\glossaryname}{Dictionary}
+\usepackage[nonumberlist]{glossaries}
+\newcommand{\dictentry}[2]{%
+  \newglossaryentry{#1}{name=#1,description={#2}}%
+  \glslink{#1}{}%
+}
+\makeglossaries
 
+
+%%% Begin document
 \begin{document}
 \include{title}
-\newpage
 \tableofcontents
 % Add the chapters
+\include{glossary}
 \include{intro}
 \include{problem}
 \include{process}
@@ -68,6 +77,7 @@
 \include{dynamics}
 \include{genre}
 \include{artwork}
-\include{references}
+\bibliographystyle{plain}
+\bibliography{referanser}
 \include{conclusion}
 \end{document}
