--- a/konseptdokument/concept.tex
+++ b/konseptdokument/concept.tex
@@ -73,6 +73,21 @@ I tillegg til disse oppgraderingene har man også muligheten til å oppgradere g
 
 %Spillbeskrivelse: Spillets sjanger er valgt til flerspiller sanntidsstrategi, men det vil også være mulighet for å spille alene mot computer. (Usikker på om vi ble enig om at dette skulle være mulig?) Viktige spillelementer vil være samling, ressursforvaltning, valg av våpen og forsvar, samt timing av våpenbruk. Spillinnholdet vil hovedsaklig være Pure Play (Usikker på dette innebærer det jeg tror), der målet er å få spilleren til å ha det gøy, men det vil også være elementer av realisme da det spilleren foretar seg vil virke inn på både lokalt og globalt miljø. Det vil være en lineær spillsekvens (Er usikker på denne fordi jeg ikke finner noen  spillsekvenstype som passer??) der spilleren får tilgang til nye våpentyper og forsvarsmuligheter etterhvert som krav for hver enkelt oppgradering er nådd. For at spillet skal få et lekent og fristende utseende har vi valgt en type tegneseriestil som vil gjøre nettopp dette. (Husker ikke om vi har vi diskutert dette, og hva vi kom fram til?)\\ 
 
+\subsection{Globale og lokale katastrofer}
+
+I den virkerlige verden har søppel innvirkning på det lokale og globale miljøet. Slik er det også i Garbage Alert. Jo mer søppel som blir kastet frem og tilbake mellom spillerne, jo høyere blir risikoen for at en katastrofe inntreffer. Spilleren som har brukt våpnene mye har en høy risiko for at en lokal katastrofe inntreffer. Dette gjør spillet vanskeligere for spillerne som ligger godt an. Den totale våpenkraften som har blitt brukt av alle spillerne er med på å øke sannsynligheten for globale katastrofer.
+
+Hver spiller vil ha to måleinstrument på panelet sitt på skjermen som viser sannsynligheten for at en geologisk eller en biologisk katastrofe kan intreffe, såkalte geohazards og biohazards.
+
+\subsubsection{Geohazarder}
+Geologiske katastrofer kan intreffe som et resultat av global oppvarmning og mekanisk påvirkning fra mennesker.
+En global geologisk katastrofe som kan intreffe er tsunami. Tsunamien vil gjøre skade på den eventuelle muren spilleren har og muligens også ødelegge våpen og miljøstasjon utover dette.
+Lokale geologiske katastrofer er jordskjelv og kolliderende isfjell. Jordskjelv gjør en liten skade på alle bygninger på øyen. Isfjellet vil kollidere i muren og gjøre en viss skade på den og muligens ødelegge den avhengig av hvor bra mur spilleren har. 
+
+
+\subsubsection{Biohazarder}
+Biologiske katastrofer... INA.. kun lokale katastrofer=?
+
 
 \subsection{Spillatmosfære}
 
