--- a/konseptdokument/intro.tex
+++ b/konseptdokument/intro.tex
@@ -3,6 +3,7 @@ Dette avsnittet skal gi et kort overblikk over hvordan resten av
 dokumentet er strukturert, hvilke spillmessige bakgrunner hver av
 deltagerene i gruppen hadde, og hvilke mål som ble satt med tanke på å
 utvikle et spillkonsept og en eventuell prototype.
+
 \subsection{Struktur}
 Dokumentet er i hovedsak strukturert i 4 hoveddeler:
 \begin{enumerate}
@@ -14,9 +15,11 @@ Dokumentet er i hovedsak strukturert i 4 hoveddeler:
 Konseptdelen skal gi en overordnet forståelse for hva spillet handler
 om. Utformingdelen skal gi dypere innsikt i hvordan spillet er bygd opp,
 og hvilke elementer det består av.
+
 \subsection{Gruppemedlemmene}
 Herunder vil den spillmessige bakgrunnen til hvert gruppemedlem bli
 beskrevet.
+
 \begin{description}
 \item[Kjetil Mehl (23)] \hfill \\
 Han begynte sin spillkarriere med en \gls{Nintendo 64} i 1999. Da
@@ -26,6 +29,7 @@ stod i fokus. Da datamaskinen kom i hus gikk spillfokuset  over på
 konkurransespill som Counter-Strike og \gls{WC3}. Han har i hovedsak vært
 en Nintendo~\gls{Fanboy}, men har i de senere år utvidet
 kolleksjonen til å omfatte Xbox.
+
 \item[Ina Sander Pedersen (26)] \hfill \\
 I 1996 oppdaget hun \gls{Rayman} til PC og var fra den dag frelst for
 serien, men skiftet raskt konsoll til Playstation. For Ina har sjangeren
@@ -33,12 +37,14 @@ plattform vært en klar favoritt gjennom årene og da hun senere fikk
 \gls{Gameboy} gikk tiden med til \gls{DKC2}. Etterhvert som årene har gått har hun skiftet mellom
 Nintendo og Playstation, samt prøvd ut endel forskjellige sjangertyper,
 men Rayman og Donkey Kong seriene er og blir favoritter. 
+
 \item[Christian Aleksander Lysne (22)] \hfill \\
 Christian var 8 år da han fikk sin første \gls{Nintendo 64}, med
 spillene \gls{Mario 64} og \gls{Mario Kart}.
 Senere gikk det i \gls{Legend of Zelda}  og \gls{SSMB}.
 \gls{Tekken} var også  populært i oppveksten. \gls{WC3} og
 \gls{Diablo 2} tok etter hvert over, og spilles fortsatt i perioder.
+
 \item[Andreas Røysland Aarnes (25)] \hfill \\
 Som seksåring prøvde Andreas \gls{Super Mario World} på
 \gls{SNES} for første gang, og det var ikke før
@@ -47,7 +53,11 @@ i 2011, da remaken New Super Mario Bros. Wii kom til
 spillverdenen. I mellomtiden har han låst seg til strategispill-seriene
 \gls{WC3}, \gls{C and C} og Age of
 Empires\cite{aoe}. 
+
+\item[Trond Kjetil (25)] \hfill \\
+Trond Kjetil startet tidlig sin spillkarriere med Nintendo Entertainment System og Super Mario Bros. i 1990, knapt 4 år gammel. TV-spill var fra da av et fast inventar i hans fritidssysler. Senere kom maskiner som Game Boy, Nintendo 64 og PC. I dag spiller han helst førstepersonsskytere på PC, da helst Team Fortress 2 og Tribes Ascend.
 \end{description}
+
 \subsection{Mål}
 Det overordnede målet for gruppen var å lage et spillkonsept hvert
 gruppemedlem følte eierskap til, og var konformt med den valgte
