Removed some including, and added more glossary.

--- a/konseptdokument/glossary.tex
+++ b/konseptdokument/glossary.tex
@@ -70,7 +70,7 @@ Nintendo 64 i 1997.
 	Mario Kart 64\\\url{http://www.mariokart64.com/}
 }
 \dictentry{C and C}{
-	Strategispill først utgitt til PC.
+	Command and Conquer, strategispill først utgitt til PC.
 }
 \dictentry{Tekken}{
 	Et japansk kampsportspill utviklet av Namco og orginalt gitt ut til
