--- a/konseptdokument/tech.tex
+++ b/konseptdokument/tech.tex
@@ -1,5 +1,10 @@
-
-Garbage Alert-prototypen slik den er i dag er implementert med nye web-teknologier, også (noe unøyaktig) kjent som HTML5. Dette medfører at Garbage Alert i prinsippet kan kjøres hvor som helst der en har en moderne nettleser med støtte for JavaScript. Garbage Alert har mobiltelefoner som hovedplattform, hvor slik teknologi kjører uten problemer.
+\section{Teknisk}\label{sec:teknisk}
+Garbage Alert-prototypen slik den er i dag er implementert med nye
+web-teknologier, også (noe unøyaktig) kjent som HTML5. Dette medfører at
+Garbage Alert i prinsippet kan kjøres hvor som helst der en har en
+moderne nettleser med støtte for JavaScript. Garbage Alert har
+mobiltelefoner som hovedplattform, hvor slik teknologi kjører uten
+problemer.
 
 
 \subsection{Systemkrav}
