--- a/konseptdokument/report.tex
+++ b/konseptdokument/report.tex
@@ -19,6 +19,9 @@
 \usepackage[utf8]{inputenc} % We want UTF8
 \usepackage{url}
 
+% Redefinere referansesaken
+\renewcommand{\refname}{Referanser}
+
 %%% Advanced verbatim environment
 \usepackage{verbatim}
 \usepackage{fancyvrb}
@@ -55,6 +58,7 @@
 \numberwithin{table}{section}																% Tablenumbering: section.tab#
 \newcommand{\HRule}{\rule{\linewidth}{0.5mm}} % command to make the lines in title page
 
+
 %%% Glossary stuff
 \newcommand*{\glossaryname}{Dictionary}
 \usepackage[nonumberlist]{glossaries}
@@ -75,10 +79,8 @@
 \include{problem}
 \include{process}
 \include{concept}
-
 \include{spillutforming}
-\include{dynamics}
-
+\include{tech}
 \include{genre}
 \include{artwork}
 \bibliographystyle{plain}
