--- a/konseptdokument/genre.tex
+++ b/konseptdokument/genre.tex
@@ -5,15 +5,16 @@ Om spillsjangre og sånt.
 
 %Før vi endte opp med sanntidsstrategisjangeren vurderte vi imidlertid en rekke andre mulige sjangre for realiseringen av konseptet. Spesielt eventyr- og rollespillsjangeren ble sterkt vurdert.
 
-Under vil vi beskrive en rekke sjangre som ble vurdert for realiseringen av \emph{Garbage Alert}.
+Under vil vi beskrive en rekke sjangre som ble vurdert for realiseringen av \emph{Garbage Alert}. Legg dog merke til at navnet ble til en tid etter at sjangeren var valgt.
 
 \subsection{Eventyr}\label{sec:eventyr}
-An adventure game is a video game in which the player assumes the role of protagonist in an interactive story driven by exploration and puzzle-solving instead of physical challenge.\footnote{Rollings, Andrew; Ernest Adams (2006), Fundamentals of Game Design, Prentice Hall}.
+Den første sjangeren som ble vurdert som utgangspunkt for realisering av spillet var eventyrsjangeren. Denne sjangeren er definert ved at en direkte kontrollerer en protagonist i en interaktiv historie. Spilldynamikken består gjerne av det å overvinne ens omgivelser ved utforskning og oppgaveløsning\footnote{Rollings, Andrew; Ernest Adams (2006), Fundamentals of Game Design, Prentice Hall}.
 
-Der finnes en hel rekke undersjangre under eventyrsjangeren. Av spesiell interesse har vært pek-og-klikk- og action-eventyrsjangrene.
+Der finnes en hel rekke undersjangre under eventyrsjangeren. Av spesiell interesse har pek-og-klikk- og action-eventyrsjangrene vært.
 	
 	\subsubsection{Pek-og-klikk-eventyr}
 
+	Her vil en styre protagonisten ved å peke hvor en vil gå, peke på objekter en vil interagere med og peke på andre mennesker en vil snakke med. Underveis samler en objekter som kan brukes andre steder i spillverden, enten direkte eller gjennom å kombinere gjenstander med hverandre for å skape nye gjenstander som gjør en  stand til å avansere i spillet.
 
 	Populære spill i denne sjangeren er \emph{Lucas Arts'} \emph{Monkey Island}-serien og \emph{Funcoms} \emph{Den Lengste Reisen}.
 
@@ -32,6 +33,7 @@ Der finnes en hel rekke undersjangre under eventyrsjangeren. Av spesiell interes
 
 
 \subsection{Strategi}\label{sec:strategispill}
+Den andre sjangeren som ble vurdert for å realisere ideen om et resirkulering- og gjenbruksspill var strategisjangeren. Sentralt i denne sjangeren er ressursforvaltning, noe vi og følte kunne brukes for å realisere et godt konsept.
 
 	\subsubsection{Turbasert strategi}
 
@@ -46,15 +48,15 @@ Der finnes en hel rekke undersjangre under eventyrsjangeren. Av spesiell interes
 
 	\subsubsection{Sanntidsstrategi}
 
-	Videre utvikling og eksperimentering med turbaserte strategispill-sjangeren førte til at en …
+	I motsetning til turbaserte strategispill vil ikke hver spiller ha sin egen tur til å utføre sine handlinger, men alle spillere vil utføre sine handlinger samtidig.
 
-	Her, i motsetning til turbaserte strategispill, vil ikke hver spiller ha sin egen tur til å utføre sine handlinger, men alle spillere vil utføre sine handlinger samtidig.
-
-	Blant de mer sentrale elementer ved sanntidsstrategispill er konseptene om ressurshåndtering. De fleste spill i denne sjangeren lar det være opp til brukeren å passe på at man til enhver tid har adekvate ressurser til å gjøre den en ønsker og å benytte seg av de rasjonelt.
-
-	Stein-saks-papir
-	Hvor enhet A kontrer enhet B, B kontrer enhet C og enhet C kontrer enhet A.
-
+	Blant de mer sentrale elementer ved sanntidsstrategispill er konseptene om ressurshåndtering. De fleste spill i denne sjangeren lar det være opp til brukeren å passe på at man til enhver tid har adekvate ressurser til å gjøre den en ønsker og å benytte seg av de rasjonelt. Et annet element som ofte er til stede er stein-saks-papir-balansering av enheter, hvor enhet A kontrer enhet B, B kontrer enhet C og enhet C kontrer enhet A.
 
 	Av populære sanntidsstrategispill finner vi \emph{StarCraft} og \emph{Command \& Conquer}.
+
+
+\subsection{Vårt valg}
+Helt i starten av prosessen som førte til Garbage Alert, startet vi med å diskutere ulike typer eventyr-tilnærminger. Det føltes svært naturlig at i et spill som skal omhandle resirkulering og gjenbruk å låne elementer fra den sjangeren som ofte benytter slike mekanismer. Folk ønsket dog mer fartsfull opplevelse, og diskusjoner om å implementere Zelda-aktige elementer i spillet ble diskutert.
+
+Samtidig ble en alternativ idé utforsket, i kraft av at enkelte ønsket å inkorporere flerspiller og konkurranse som en motivasjonsfaktor. Her startet ideen med å skape et brettspill-inspirert spill. Denne ideen utviklet seg fra å være et svært komplisert turbasert spill til å bli stadig enklere, og stadig raskere, fram til det Garbage Alert til slutt skulle bli; et sanntidsstrategispill.
 
