Retting av prosessrapport frem til side 12

--- a/prosessrapport/abstract.tex
+++ b/prosessrapport/abstract.tex
@@ -1,8 +1,7 @@
 \begin{abstract}
 \emph{Garbage Alert} er et spill som skal redde verden gjennom å opplyse
 menneskeheten om viktigheten av resirkulering og gjenbruk. Dette gjøres
-ved å abstrahere konseptet ...
-En stor del av faget går ut på hvordan beslutninger og samarbeid har
-foregått innad i gruppen. Denne rapporten vil derfor beskrive disse
+ved å abstrahere konseptet. En stor del av faget går ut på hvordan beslutninger
+og samarbeid har foregått innad i gruppen. Denne rapporten vil derfor beskrive disse
 prosessene.
 \end{abstract}
