--- a/prosessrapport/gruppen.tex
+++ b/prosessrapport/gruppen.tex
@@ -1,5 +1,5 @@
 \section{Presentasjon av gruppen}
-Da \emph{"En spillverden på ett semester"} dreier seg om det å skape og utvikle et spillkonsept viste landsbyen seg å være svært attraktiv for studenter innenfor datarelaterte fag. Også vår gruppe reklekterte dette, og tre av gruppens fem medlemmer har datafaglig bakgrunn.
+Da \emph{"En spillverden på ett semester"} dreier seg om det å skape og utvikle et spillkonsept viste landsbyen seg å være svært attraktiv for studenter innenfor datarelaterte fag. Også vår gruppe reflekterte dette, og tre av gruppens fem medlemmer har datafaglig bakgrunn.
 
 \subsection{Gruppens medlemmer}
 	\subsubsection{Andreas Røysland Aarnes}
@@ -28,16 +28,16 @@ Da \emph{"En spillverden på ett semester"} dreier seg om det å skape og utvikl
 
 	Trond har hele livet hatt stor interesse av spill, og startet sin karriere allerede med Nintendo Entertainment System som 4-åring. På fritiden skaper han enkle HTML5/JavaScript-baserte spill inspirert av spillene han vokste opp med. Alt dette bidro til at nettopp denne landsbyen var hans førstevalg i EiT.
 
-	Fra før hadde han lite kunnskap om Eksperter i Team, ut over at det er et fag som få liker. Trond var allikevel veldig spent på mulighetene for å få skape et spill sammen med andre fra andre studieretninger. Av det han har hørt fra andre angående EiT, frykter han dog at selv om der absolutt er gode muligheter til å produsere et ferdig spill, er det en overhengende fare for at mye av den allokerte tiden går med til alt annet enn utvikling.
+	Fra før hadde han lite kunnskap om Eksperter i Team, ut over at det er et fag som få liker. Trond var allikevel veldig spent på mulighetene for å få skape et spill sammen med andre fra andre studieretninger. Av det han har hørt fra andre angående EiT, frykter han dog at selv om det absolutt er gode muligheter til å produsere et ferdig spill, er det en overhengende fare for at mye av den allokerte tiden går med til alt annet enn utvikling.
 
 
 \subsection{Forventninger og ambisjoner}
-De første landsbydagene gikk med til flere diskusjoner ut på hvilke ambisjoner og forventinger vi hadde til Eksperter i Team, gruppen og ikke minst resultatet. Det var samstemt enighet om at vi ønsker en god karakter i faget.
+De første landsbydagene gikk med til flere diskusjoner om hvilke ambisjoner og forventinger vi hadde til Eksperter i Team, gruppen og ikke minst resultatet. Det var samstemt enighet om at vi ønsker en god karakter i faget.
 
 Kjetil hadde delte meninger om Eksperter i Team, hovedsaklig basert på rykter og fortellinger fra andre studenter. Noen mente at dette kurset var et rent tidssluk og "svada", andre sa at det var et av de bedre kursene på NTNU. Det at denne landsbyen var førstevalget hans var dog en motivasjonsfaktor. Trond har hatt inntrykket av at en ofte får jobbe med snedige ting i dette faget, men mye av tiden går med til prosessrelaterte ting i stedet for prosjektrelaterte ting.
 
 \subsection{Samarbeidsavtalen}
-Tidlig i prosjektfasen ble vi sterkt anbefalt å bli enige om å bli enige oss i mellom om hva vi forventer av kurset og mengden arbeid vi planlegger å legge inn i prosjektet, og samle disse tankene og forventningene i en \emph{samarbeidsavtale}. En samarbeidsavtale er en skriftlig avtale inngått mellom alle parter i en samarbeidskontekst som skal danne rammer for hva de ulike partene kan forvente av samarbeidet, og hva de eventuelt ikke kan forvente. Denne avtalen er retningslinjer for samarbeidet, og skal nødvendigvis ikke brukes for å "straffe" medlemmer som bryter avtalen\cite{samarbeidsavtale}.
+Tidlig i prosjektfasen ble vi sterkt anbefalt å bli enige oss i mellom om hva vi forventer av kurset og mengden arbeid vi planlegger å legge inn i prosjektet, og samle disse tankene og forventningene i en \emph{samarbeidsavtale}. En samarbeidsavtale er en skriftlig avtale inngått mellom alle parter i en samarbeidskontekst som skal danne rammer for hva de ulike partene kan forvente av samarbeidet, og hva de eventuelt ikke kan forvente. Denne avtalen er retningslinjer for samarbeidet, og skal nødvendigvis ikke brukes for å "straffe" medlemmer som bryter avtalen\cite{samarbeidsavtale}.
 
 Arbeidet med å utrede denne avtalen gikk veldig fint, og det var få uenigheter. Dette styrket i alle fall Kjetil sitt inntrykk av at gruppen var veldig samstemt, selv om medlemmene hadde forskjellig studiebakgrunner.
 
@@ -45,12 +45,12 @@ Nedenfor er de viktigste punktene i vår samarbeidsavtale, kort oppsummert.
 % Er kanskje like greit å ta med hele?
 
 \begin{itemize}
-	\item Hovedmomenter: Gruppen skal sette felles mål, og alle skal være klar over desse. Gruppen skal være åpen for at alle skal komme med innspill.
+	\item Hovedmomenter: Gruppen skal sette felles mål, og alle skal være klar over disse. Gruppen skal være åpen for at alle skal komme med innspill.
 	\item Møtestruktur: Hver onsdag skal startes ved at alle forteller hva de har gjort siden sist, i tillegg til hva man skal gjøre/har som mål i løpet av dagen. Her er det også viktig å belyse eventuelle problemer en har i plenum med resten av gruppen. Denne fremgangsmåten er sterkt inspirert av Scrum-metodologien\cite{Scrum} for programvareutvikling.
-	\item Beslutningsstrategi: Er det noe vi absolutt ikke blir enige om, vil flertallet bestemme. Alle ideer skal dog høres grundig ut og skal helst skje vedtas enstemmig om det lar seg gjøre.
+	\item Beslutningsstrategi: Er det noe vi absolutt ikke blir enige om, vil flertallet bestemme. Alle ideer skal dog høres grundig ut og skal helst vedtas enstemmig om det lar seg gjøre.
 \end{itemize}
 
-Vi unnlot bevisst å inkludere represalier\footnote{Der eksisterer dog en muntlig avtalt ølstraff for kodebidrag som brekker andres kode.} som et punkt i denne avtalen, da våre ambisjoner implisitt krever at alle bidrar i prosjektet.
+Vi unnlot bevisst å inkludere represalier som et punkt i denne avtalen, da våre ambisjoner implisitt krever at alle bidrar i prosjektet.
 
 Det å fastsette en samarbeidsavtale så tidlig i prosessen viste seg å
 være en god gruppeøvelse. Det gjorde at alle medlemmene måtte ytre hva
