--- a/prosessrapport/innledning.tex
+++ b/prosessrapport/innledning.tex
@@ -35,7 +35,7 @@ tar for seg gjenbruk og/eller resirkulering.""
 \end{quotation}
 
 En ønsker med andre ord å skape et
-produkt som kan bidrat til bevissgjøring av klimaspørsmål, samt å gjøre
+produkt som kan bidra til bevistgjøring av klimaspørsmål, samt å gjøre
 gjenbruk til noe morsomt og underholdende.
 
 I denne sammenhengen har landsbyen hatt mulighet til å samarbeide med
