--- a/prosessrapport/hoveddel.tex
+++ b/prosessrapport/hoveddel.tex
@@ -4,7 +4,7 @@
 Under en av gruppens diskusjoner 8. februar fikk vi en tilbakemelding av fasilitator på hvordan kommunikasjonen i gruppen utartet seg. For å gå inn i dybden på dette kan det nevnes hvordan stemningen på gruppen var på starten av dagen. Onsdagen før fikk vi utviklet en idé som alle på gruppen var fornøyde med. Etter flere timers arbeid med dette hadde vi en oppsummering sammen med landsbyens leder for å oppdatere henne på hvordan vi lå an. Det viste seg at slik spillet var på dette stadiet var resirkulering ikke et stort nok fokus i spillet. Vi måtte derfor gjøre store konseptuelle endringer for å bedre kunne treffe landsbyens tema. Dette ble en dårlig avslutning på dagen, og motivasjonen sank betraktelig.
 
 	\subsection{Demotivasjon til motivasjon}
-	Da vi møtte opp onsdag 8. februar var den generelle stemningen på gruppen at medlemmene var demotiverte. Det at ideen vår fra den foregående onsdagen føltes som bortkastet lå fortsatt i tankene til alle på gruppen. Kjetil nevnte at han var lite klar for å gå tilbake til start og gjennom nye idémyldringer, ettersom vi forrige gang endelig følte at vi hadde en idé som alle var fornøyde med. Dette utsagnet var ikke akkurat noe som bidro til en bedre start på dagen for resten av gruppen. Trond og Andreas tenkte at man bare må gjøre det beste ut av det, og de startet en diskusjon som gikk ut på å dekomponere ideen vår fra forrige gang. Kjetil kastet seg for på, og motivasjonen hans økte når han innså at dette kanskje ikke var verdens undergang. Etter en periode med ny brainstorming videreutviklet og endret vi det vi jobbet med forrige onsdag. Lydnivået økte og motivasjonen på gruppen steg blant flere av medlemmene. En ny idé ble født.
+	Da vi møtte opp onsdag 8. februar var den generelle stemningen på gruppen at medlemmene var demotiverte. Det at ideen vår fra den foregående onsdagen føltes som bortkastet lå fortsatt i tankene til alle på gruppen. Kjetil nevnte at han var lite klar for å gå tilbake til start og gjennom nye idémyldringer, ettersom vi forrige gang endelig følte at vi hadde en idé som alle var fornøyde med. Dette utsagnet var ikke akkurat noe som bidro til en bedre start på dagen for resten av gruppen. Trond og Andreas tenkte at man bare må gjøre det beste ut av det, og de startet en diskusjon som gikk ut på å dekomponere ideen vår fra forrige gang. Kjetil kastet seg på, og motivasjonen hans økte når han innså at dette kanskje ikke var verdens undergang. Etter en periode med ny brainstorming videreutviklet og endret vi det vi jobbet med forrige onsdag. Lydnivået økte og motivasjonen på gruppen steg blant flere av medlemmene. En ny idé ble født.
 
 	\subsection{Individuelle oppfatninger}
 	Da Andreas følte at gruppen virkelig var i sving, kom fasilitator bort til gruppen med en skisse som viste hvordan kommunikasjonen på gruppen var.
@@ -24,12 +24,12 @@ Under en av gruppens diskusjoner 8. februar fikk vi en tilbakemelding av fasilit
 
 	Dette kom som en overaskelse på gruppen. Det viste seg at Andreas, Kjetil og Trond var mest aktive, mens Ina og Christian var mer passive. Dette måtte diskuteres i gruppen.
 
-	Ina mener at årsaken til hennes passivitet er i tråd med hennes vanlige oppførsel under et gruppearbeid. Hun legger til at hun er meget observant og enig i det som skjer, men at hun ikke alltid legger merke til at hun kan virke passiv for resten av gruppen. Når hun er enig tenker hun ikke over å si dette til resten av gruppen, eller gi de andre hennes godskjennelse. Hvis hun derimot er uenig sier hun ifra. Hun understreker at hun ikke er tilbakeholdende eller ukomfortabel med å si ting foran hele gruppen. Ina sier at hun føler seg like aktiv som de andre selv om hun snakker mye mindre. Dette er derimot ikke resten av gruppens oppfatning, som i dette tilfelle oppfattet henne som passiv. Christian var veldig trøtt på morgenen, og merket at han var "litt i kjelleren". Etter en kaffekopp ble han dog mer deltakende i diskusjonen.
+	Ina mener at årsaken til hennes passivitet er i tråd med hennes vanlige oppførsel under et gruppearbeid. Hun legger til at hun er meget observant og enig i det som skjer, men at hun ikke alltid legger merke til at hun kan virke passiv for resten av gruppen. Når hun er enig tenker hun ikke over å si dette til resten av gruppen, eller gi de andre hennes godkjennelse. Hvis hun derimot er uenig sier hun ifra. Hun understreker at hun ikke er tilbakeholden eller ukomfortabel med å si ting foran hele gruppen. Ina sier at hun føler seg like aktiv som de andre selv om hun snakker mye mindre. Dette er derimot ikke resten av gruppens oppfatning, som i dette tilfelle oppfattet henne som passiv. Christian var veldig trøtt på morgenen, og merket at han var "litt i kjelleren". Etter en kaffekopp ble han dog mer deltakende i diskusjonen.
 
 	Kjetil mener at det er lett at man uten å tenke over det henvender seg til de som er mest aktive, ettersom man får mer respons fra dem. Andreas sier at grunnen til at vi ikke inkluderer alle ikke har noe med at man trenger aksept fra enkelte av gruppenes medlemmer, men at diskusjonen hoper seg opp der folk er mest aktive. Dette observerte Andreas senere på dagen, da mønsteret flyttet på seg.
 	% Den siste setninga må enten utdypes mer eller sløyfes-
 
-	Etter at vi ble observante på hvordan dette mønsteret var, tok vi en pause; for å tenke litt på andre ting, ta en kaffe, og reflektere litt over hvorfor det var slik. Det var ingen tvil om at aktiviteten på gruppen ble mer balansert etter denne pausen. Vi ble klar over hvem vi henvender oss til når vi snakker. Andreas sa senere at han begynte å ta dette i betrakning i senere diskusjoner, der han beveger blikket mer for å få visuell kontakt med alle på gruppen. Trond foreslå at man kan legge til spørsmål til gruppemedlemmene om de er enige eller uenige, og rette disse mot dem på gruppen som er mer passive. Ifølge Schwarz \cite{Schwarz} er det å invitere til drøfting av egne innspill en god måte å øke effektiviteten i gruppen på. Dette bidrar til å få mer kommunikasjon mellom alle på gruppen, og inkluderer dem som kan være umotiverte og trøtte eller ikke kommuniserer like mye. 
+	Etter at vi ble observante på hvordan dette mønsteret var, tok vi en pause; for å tenke litt på andre ting, ta en kaffe, og reflektere litt over hvorfor det var slik. Det var ingen tvil om at aktiviteten på gruppen ble mer balansert etter denne pausen. Vi ble klar over hvem vi henvender oss til når vi snakker. Andreas sa senere at han begynte å ta dette i betrakning i senere diskusjoner, der han beveger blikket mer for å få visuell kontakt med alle på gruppen. Trond foreslo at man kan legge til spørsmål til gruppemedlemmene om de er enige eller uenige, og rette disse mot dem på gruppen som er mer passive. Ifølge Schwarz \cite{Schwarz} er det å invitere til drøfting av egne innspill en god måte å øke effektiviteten i gruppen på. Dette bidrar til å få mer kommunikasjon mellom alle på gruppen, og inkludere dem som kan være umotiverte og trøtte eller ikke kommuniserer like mye. 
 
 	% \subsection{Tittel} ?
 	Gruppen ble også bevisst på et annet problem under videre diskusjon om spillideen – selv om ideen utviklet seg raskt og det var stor enighet i gruppen, så vi allikevel at når vi satte oss ned og tegnet ut ideene på hvert vårt papir at flere av oss så for oss ganske forskjellige ting. Selv om kommunikasjonen så ut til å fungere etter situasjonen om gruppens kommunikasjonsmønster, var det likevel store forskjeller i hva de forskjellige medlemmene trodde vi diskuterte. Her har Schwarz en teori om at man ved å dele all relevant informasjon, og alltid spille med åpne kort og konsekent avdekke resonnementene bak de innspillene man kommer med, vil man bedre kunne hjelpe gruppen i å arbeide effektivt sammen. Ved å gå mer i dybden på det vi diskuterer, snakke om detaljer og å være klar over at vi tenker forskjellig fører videre til at slike misforståelser blir unngått. Det å kartlegge slike ulikheter kan også brukes som en fordel i gruppen. I neste avsnitt reflekteres det over denne situasjonen i forhold til gruppemedlemmenes ulike tankegang.
