--- a/konseptdokument/intro.tex
+++ b/konseptdokument/intro.tex
@@ -23,7 +23,7 @@ beskrevet.
 \begin{description}
 \item[Kjetil Mehl (23), datateknikk] \hfill \\
 Han begynte sin spillkarriere med en \gls{Nintendo 64} i 1999. Da
-var det eventyr og rollespill (se Seksjon~\ref{sec:sjangre}) som
+var det eventyr og rollespill (se Avsnitt~\ref{sec:sjangre}) som
 \gls{Legend of Zelda} og \gls{Banjo Kazooie} som
 stod i fokus. Da datamaskinen kom i hus gikk spillfokuset  over på
 konkurransespill som Counter-Strike og \gls{WC3}. Han har i hovedsak vært
@@ -61,7 +61,7 @@ Trond Kjetil startet tidlig sin spillkarriere med Nintendo Entertainment System 
 \subsection{Mål}
 Det overordnede målet for gruppen var å lage et spillkonsept hvert
 gruppemedlem følte eierskap til både som et interesseområde og hvor hver person får brukt sin faglige kompetanse. Målet skulle også være konformt med den valgte
-problemstillingen (se Seksjon~\ref{sec:problemstilling}). En prototype i
+problemstillingen (se Avsnitt~\ref{sec:problemstilling}). En prototype i
 tillegg til dette ville bli en bonus i forhold til målet.
 
 \subsection{Problemstilling}
