--- a/konseptdokument/glossary.tex
+++ b/konseptdokument/glossary.tex
@@ -1,5 +1,5 @@
-\printglossary[title=Gloser,toctitle=Begrep,style=list]
-\addcontentsline{toc}{section}{Gloser}
+\printglossary[style=list]
+\addcontentsline{toc}{section}{Begreper}
 \dictentry{SNES}{
 	Super Nintedo Entertainment System, Spillmaskin utgitt av Nintendo i 1992.
 }
