første versjon av teksten

--- a/konseptdokument/spillerpremier.tex
+++ b/konseptdokument/spillerpremier.tex
@@ -4,3 +4,9 @@
 % Define these objects by describing what affect they cause and how the
 % player can use the object.
 \subsection{Spillerpremier}
+
+Gjennom å oppgradere ens miljøstasjon vil en kunne visuelt se at øya blir renere, atmosfæren blir klarere og bakgrunnsmusikken blir penere. Lystige lydeffekter signaliserer at en gjør noe som gir spilleren en fordel i forhold til motspillerne, for eksempel når en oppgraderer ens utstyr eller utfører et vellykket angrep mot sine motstandere. På den andre siden vil dystre lydeffekter signalisere negative hendelser, som for eksempel at en blir angrepet av motspillerne. Dette håper vi skaper en positiv følelse av mestring hos spilleren. 
+
+Videre er der en intrisitt verdi i å vinne et spill over ens medspillere.
+
+For å kunne underbygge spillets underliggende tematikk om miljøvennlighet vil naturen straffe spillerne om de er er for miljøuvennlige med naturkatastrofer.
