Removed key features.

--- a/konseptdokument/intro.tex
+++ b/konseptdokument/intro.tex
@@ -76,7 +76,7 @@ Det ble også ytret ønske om at spillmekanikken skulle foregå både på et
 mikroskopisk nivå (lokalt) og makroskopisk nivå (globalt). Ved å
 deretter bake inn grunnstenene i problemstillingen (resirkulering og
 redusert forbruk), ble problemstillingen forfattet.
-\subsubsection{Problemstillingen}\label{sec:problemstillingen}
+\subsubsection{Problemstillingen}\label{sec:problemstilling}
 Den valgte problemstillingen er gjengitt nedenfor:
 \begin{quotation}
 \large\emph{``\input{../problemstilling}''}
@@ -92,7 +92,7 @@ fra idè til konsept.
 Det ble brukt mye tid på å utforske forskjellige idèer som var
 interessante. Gruppen følte seg ikke veldig bundet av den opprinnelige
 problemstillingen, og eksperimenterte derfor med forskjellige idèer.
-Gitt problemstillingen i Avsnitt~\ref{sec:problemstillingen} var det
+Gitt problemstillingen i Avsnitt~\ref{sec:problemstilling} var det
 naturlig å tenke på et spill som var turbasert eller sanntidsspill med
 flere spillere. Det stod også sentralt å bruke hele gruppens kompentanse. Ettersom tre av gruppens medlemmer har god datakunnskap var det essensielt å flette inn biologi og geologi i idèen. Med fokus rundt dette skapte vi vår første idè.
 \begin{description}
