--- a/konseptdokument/concept.tex
+++ b/konseptdokument/concept.tex
@@ -91,14 +91,19 @@ Biologiske katastrofer... INA.. kun lokale katastrofer=?
 
 \subsection{Spillatmosfære}
 
-This is where it is best to have a mood board or a clear description of the game’s style. 
+Ved spillstart er himmelen full av mørke skyer og musikken vil ha et melankolsk preg. Noe som gjør 
+ at stemningen er litt tung og dyster. Fargene på spillområdet er uklare og skitne fordi øya er forurenset av søppel.
+Når søppel fjernes fra øya vil stemningen lysne ved at skyene blir hvite og forsvinner med tiden. Musikken blir lystigere, 
+solen kommer fram og fargene på øya øker gradvis i styrke. Det vil begynne å gro gress, blomster og 
+trær på områder av øya som blir frigjort for søppel, og små hus vil dukke opp ettersom øya blir renere. 
 
-This is a good place to start interacting with a graphic designer.\\
+Stemningen på en ren og fin øy kan også forverres hvis den mottar mye søppel fra motstanderne og det ikke fjernes i tilstrekkelig hastighet,
+eller hvis miljøstasjonen på øya ødelegges slik at søppel ikke blir gjenvunnet.
+Blomster og trær vil visne når områdene de gror på forurenses av søppel, en klar blå himmel blir dekket av skyer som etterhvert mørkner og
+musikken blir jevnt mer melankolsk. 
+Når en øy er helt overfylt med søppel vil den synke ned i havet. Dette gjør at havet  får et forurenset utseende,
+ og de resterende spillerne vil bli utsatt for en global katastrofe.
 
-Atmosphere Mood Board\\
-Character  Units Sketch and Description\\
-A Level(Locations) Sketch and Description\\
-Audio Description
 
 \subsection{Game Play}
 
