--- a/konseptdokument/spillerpremier.tex
+++ b/konseptdokument/spillerpremier.tex
@@ -5,8 +5,10 @@
 % player can use the object.
 \subsection{Spillerpremier}
 
-Gjennom å oppgradere ens miljøstasjon vil en kunne visuelt se at øya blir renere, atmosfæren blir klarere og bakgrunnsmusikken blir penere. Lystige lydeffekter signaliserer at en gjør noe som gir spilleren en fordel i forhold til motspillerne, for eksempel når en oppgraderer ens utstyr eller utfører et vellykket angrep mot sine motstandere. På den andre siden vil dystre lydeffekter signalisere negative hendelser, som for eksempel at en blir angrepet av motspillerne. Dette håper vi skaper en positiv følelse av mestring hos spilleren. 
+Gjennom å oppgradere ens miljøstasjon vil en kunne visuelt se at øya blir renere, atmosfæren blir klarere og bakgrunnsmusikken blir penere. Lystige lydeffekter signaliserer at en gjør noe som gir spilleren en fordel i forhold til motspillerne, for eksempel når en oppgraderer ens utstyr eller utfører et vellykket angrep mot sine motstandere. Dette håper vi skaper en positiv følelse av mestring hos spilleren. 
 
 Videre er der en intrisitt verdi i å vinne et spill over ens medspillere.
 
 For å kunne underbygge spillets underliggende tematikk om miljøvennlighet vil naturen straffe spillerne om de er er for miljøuvennlige med naturkatastrofer.
+
+På samme måte som at muntre lydeffekter underbygger gode handlinger gjort av spilleren, vil dystre lydeffekter signalisere negative hendelser. Dette kan for eksempel være i det en blir angrepet av motspillerne. 
