--- a/konseptdokument/concept.tex
+++ b/konseptdokument/concept.tex
@@ -20,12 +20,11 @@ hvilke spillaspekter som er tatt med og spilldynamikken.
 
 
 \input{definisjoner}
+\input{spillelement}
 \subsection{Spilldynamikken}
-
-Garbage Alert er i utgangspunktet et flerspiller sanntidsstrategispill, men det er også mulighet for å spille alene mot spillere med kunstig intelligens. 
-
-Man starter spillet med en øy og følgende elementer:
-
+Garbage Alert er i utgangspunktet et flerspiller sanntidsstrategispill,
+men det er også mulighet for å spille alene mot spillere med kunstig
+intelligens. Man starter spillet med en øy og følgende elementer:
 \begin{itemize}
 	\item Et resirkuleringssenter
 	\item En våpenstasjon
@@ -126,6 +125,5 @@ Why is all this fun?\\
 \\
 
 \input{spillmatrise}
-\input{spillelement}
 \input{spillerpremier}
 \input{ui}
